@@ -39,6 +39,7 @@ const static struct {
 	{ "XYMONDREL", VERSION },
 	{ "XYMONSERVERROOT", XYMONTOPDIR },
 	{ "XYMONSERVERLOGS", XYMONLOGDIR },
+	{ "XYMONRUNDIR", XYMONLOGDIR },
 	{ "XYMONSERVERHOSTNAME", XYMONHOSTNAME },
 	{ "XYMONSERVERIP", XYMONHOSTIP },
 	{ "XYMONSERVEROS", XYMONHOSTOS },
